# LLM

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  EstruturaProjeto.md  README.md  agent_memory.json  benchmark.py  cli.py  cli_chat.py  cli_streaming.py  command_handlers.py  command_ui.py  commands.py  config.example.json  config.py  config_validation.py  estrutura.txt  gerar.py  health_report.json  logger.py  paths.py  pyproject.toml  refactor_orchestrator.py  requirements-core.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt  session.py
agent/: __init__.py  auto_coder.py  cancellation.py  checkpoint_manager.py  complexity.py  context_manager.py  contracts.py  cost_guard.py  error_handler.py  execution_state.py  final_response.py  grammars.py  health_check.py  hierarchical_executor.py  hierarchical_planner.py  incremental_summarizer.py  memory.py  model_client.py  orchestrator.py  parsers.py  plan_builder.py  plan_executor.py  plan_optimizer.py  plan_validator.py  prompts.py  reactive_loop.py  replan.py  router.py  security_patterns.py  security_scanner.py  semantic_memory.py  state.py  task_report.py  task_tracker.py  tool_executor.py  tool_metadata.py  watchdog.py  workspace.py
docs/: README.md  agente-codigo.md  arquitetura-execucao.md  arquivos-raiz.md  estrutura-diretorios.md  guia-extensao.md  legado.md  modelos-providers.md  multitarefa.md  perfil-hardware.md  skills.md  testes.md
quality/: baseline.json
scripts/: __init__.py  benchmark.py  check_quality.py  clean_runtime.py
tests/: test_config.py  test_grammar.py  (+5 more)
(+178 files in other folders)
